# wind-ai-openoa

./: 最终报告.docx
wind-ai-openoa/: .gitignore  DATA_LICENSE.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
wind-ai-openoa/config/: plant_meta.yml
wind-ai-openoa/notebooks/: 00_quickstart.ipynb
wind-ai-openoa/reports/: wind_ai_openoa_academic_report_optimized.docx  wind_ai_openoa_report.docx
wind-ai-openoa/reports/tables/: evaluation_by_era5_wind_speed_bin.csv  evaluation_by_month.csv  evaluation_by_power_bin.csv  evaluation_by_turbine.csv  evaluation_by_wind_speed_bin.csv  power_baseline_metrics.json
wind-ai-openoa/scripts/: check_project.py  download_data.py  generate_figures.py  generate_report.py  run_experiment.py  train_baseline.py
wind-ai-openoa/src/wind_ai/: __init__.py  evaluation.py  features.py  openoa_loader.py  paths.py
wind-ai-openoa/tests/: test_evaluation.py  test_features.py
