[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-ai-openoa"
version = "0.1.0"
description = "OpenOA-based wind SCADA processing and machine-learning starter project"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "OpenOA==3.2",
  "scikit-learn>=1.4,<2",
  "joblib>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
